@@ -1,5 +1,9 @@
 2008-01-05  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
 
+	* ax25.c:
+	    Verify TNC2 format APRS message's FROM>DEST,VIA,VIA:
+	    callsigns to be of proper syntax.
+
 	* Makefile, aprx.8, aprx.8.in, aprx-stat.8, aprx-stat.8.in,
 	  aprx.conf, aprx.conf.in:
 	    Centralized a bit of configuring into Makefile, generating
